# chromium-mcp

./: .dockerignore  Cargo.toml  Dockerfile  README.md  opencode.json
.github/workflows/: release.yml
scripts/: install.sh
src/: browser.rs  main.rs  server.rs
