[package]
name = "chromium-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing browser automation via chromiumoxide (headless Chrome/CDP)"

[[bin]]
name = "chromium-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK: server + stdio transport + streamable-HTTP transport
rmcp = { version = "1.7", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }

# Headless Chrome / Chrome DevTools Protocol driver
chromiumoxide = "0.9"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP transport plumbing
axum = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

anyhow = "1"
thiserror = "1"
base64 = "0.22"

clap = { version = "4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
